lab7_ngohoangduy_pc05141

--- a/lab7/package.json
+++ b/lab7/package.json
@@ -9,6 +9,19 @@
   "author": "ngohoangduy-PC05141",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^8.56.0"
+    "eslint": "^8.56.0",
+    "husky": "^9.0.10",
+    "lint-staged": "^15.2.1"
+  },
+  "husky":{
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,json,css,md,html}": [
+      "prettier --single-quotes --write",
+      "git add"
+    ]
   }
 }
